--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
 		"bootstrap": "^5.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.1.2",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
+		"redux": "^4.2.1",
+		"redux-thunk": "^2.4.2",
 		"sweetalert2": "^11.7.27",
 		"web-vitals": "^2.1.4"
 	},
